feat: add comprehensive platform demo script for recordings
- Create scripts/demo-complete.sh orchestrating full platform demonstration
- Comprehensive demo workflow:
  * Prerequisites checking (Docker, Node, npm, .env, Stellar keys)
  * Service startup (PostgreSQL, migrations)
  * W3C Verifiable Credentials and blockchain demo execution
  * Package ecosystem showcase (@proofpass/vc-toolkit, blockchain, qr-toolkit, templates)
  * API endpoints documentation
  * Platform UI walkthrough
  * Automated markdown report generation
- Color-coded terminal output for professional presentation
- Configurable demo speed (fast/normal/slow) via DEMO_SPEED env var
- Add npm scripts: demo, demo:fast, demo:slow, demo:stellar
- Ready for platform capability recordings and demos

--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "db:seed": "cd apps/api && npx prisma db seed",
     "setup:db": "npm run db:generate && npm run db:migrate",
     "setup:stellar": "npx tsx scripts/setup-stellar.ts",
+    "demo": "scripts/demo-complete.sh",
+    "demo:fast": "DEMO_SPEED=fast scripts/demo-complete.sh",
+    "demo:slow": "DEMO_SPEED=slow scripts/demo-complete.sh",
+    "demo:stellar": "npx tsx scripts/demo-stellar-testnet.ts",
     "prepare": "husky install || true"
   },
   "engines": {
