test: add comprehensive automated tests for CLI and bash scripts
Add automated testing infrastructure for CLI tool and bash scripts

CLI Tests (cli/__tests__/proofpass.test.ts):
- Test CLI execution and help command
- Verify all 16 commands are listed correctly
- Test status command functionality
- Validate required script dependencies
- Check command categorization
- Test error handling for unknown commands
- Verify npm script integration
- Validate ANSI color output
- Environment checks (Node.js version, packages)

Bash Scripts Tests (scripts/__tests__/scripts.test.sh):
- Script existence, syntax, and executability tests
- Function definition verification
- TTY detection for colors
- Docker stderr suppression
- Conditional clear implementation
- Shebang validation
- Color and logging function checks
- Error handling verification (set -e)
- 34/34 tests passing (100% success rate)

Package.json Updates:
- Add test:cli script for CLI testing
- Add test:scripts script for bash scripts testing
- Add test:all script to run all tests

Test Results:
- Bash scripts: 34/34 tests passing (100%)
- CLI tests: Implemented with comprehensive coverage
- Total: 505 lines of test code added

Author: Fernando Boiero <fboiero@frvm.utn.edu.ar>

--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --coverage --maxWorkers=2",
+    "test:cli": "jest cli/__tests__/proofpass.test.ts",
+    "test:scripts": "./scripts/__tests__/scripts.test.sh",
+    "test:all": "npm run test:scripts && npm run test:cli",
     "test:blockchain": "cd packages/blockchain && npx tsx examples/test-local.ts",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
